--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
 name = "zeditor"
-version = "0.1.0-a"
+version = "0.1.0-b"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-cursive = "0.18.0"
+cursive = { git = "https://github.com/gyscos/cursive" }
+ 
