--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "zeditor"
-version = "0.1.0-f"
+version = "0.1.0-g"
 edition = "2021"
 
 [dependencies]
 cursive = { git = "https://github.com/gyscos/cursive" }
- 
+regex = "1.5.6"
