--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ cursive = { git = "https://github.com/gyscos/cursive" }
 futures = "0.3.21"
 glob = "0.3.0"
 regex = "1.5.6"
-rusqlite = "0.27.0"
+rusqlite = {version = "0.27.0", features = ["bundled"]}
 tokio = {version = "1.19.2", features = ["full"]}
