--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zeditor"
-version = "0.1.0-UwU"
+version = "0.1.0-very-well-done"
 edition = "2021"
 
 [dependencies]
@@ -8,4 +8,5 @@ cursive = { git = "https://github.com/gyscos/cursive" }
 futures = "0.3.21"
 glob = "0.3.0"
 regex = "1.5.6"
+rusqlite = {version = "0.27.0", features = ["bundled"]}
 tokio = {version = "1.19.2", features = ["full"]}
