--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zeditor"
-version = "0.1.1-b"
+version = "0.1.1-c"
 edition = "2021"
 
 [dependencies]
@@ -8,5 +8,5 @@ cursive = { git = "https://github.com/gyscos/cursive" }
 futures = "0.3.21"
 glob = "0.3.0"
 regex = "1.5.6"
-rusqlite = {version = "0.27.0", features = ["bundled"]}
+rusqlite = {version = "0.27.0", features = ["bundled","blob"]}
 tokio = {version = "1.19.2", features = ["full"]}
