--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.1-c"
 edition = "2021"
 
 [dependencies]
+blake3 = "1.3.1"
 cursive = { git = "https://github.com/gyscos/cursive" }
 futures = "0.3.21"
 glob = "0.3.0"
