--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "zeditor"
-version = "0.1.4-a"
+version = "0.1.4-b"
 edition = "2021"
 
 [dependencies]
 blake3 = "1.3.1"
-cursive = { git = "https://github.com/gyscos/cursive" }
+cursive = { git = "https://github.com/gyscos/cursive", features = ["toml"] }
 futures = "0.3.21"
 glob = "0.3.0"
 regex = "1.5.6"
